--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
     },
     "autoload": {
         "psr-4": {
-            "PhpOffice\\PhpWord\\": "src/PhpWord"
+            "PhpOffice\\PhpWord\\": "src/PhpWord/"
         }
     }
 }
